[project]
name = "geo-pandas-example"
version = "1.0.0"
description = "Comprehensive GeoPandas tutorial covering basic to advanced geospatial operations with focus on energy grid mapping"
requires-python = ">=3.12,<3.13"
dependencies = [
    "geopandas>=1.0.1",
    "matplotlib>=3.9.0",
    "contextily>=1.6.0",
    "folium>=0.17.0",
    "shapely>=2.0.6",
    "rtree>=1.3.0",
    "pyogrio>=0.9.0",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "mapclassify>=2.8.0",
    "geodatasets>=2023.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "black>=24.8.0",
    "ruff>=0.6.0",
]

